--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+
 <title>Aplicacion movil 3</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 <link href="jquery-mobile/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
 <div align="center" data-role="controlgroup" data-type="vertical">
 <div style="width:40%;">
 <a href="#" data-role="button" data-icon="star" data-iconpos="right" id="beep"> Beep</a>
-<a href="#" data-role="button" data-icon="refresh" data-iconpos="right" id="Vibrar"> Vibrar</a>
+<a href="#" data-role="button" data-icon="refresh" data-iconpos="right" id="vibrar"> Vibrar</a>
 </div>
 </div>
 
